2nd Button + Fix for settings & Sprint-View

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Jira Snippet",
-  "version": "2.1",
+  "version": "2.2",
   "description": "Jira Snippet is a browser extension that streamlines your Jira experience by allowing you to quickly copy issue information in a customizable format. It's easy to configure and enables you to choose what data you want to include when copying, such as issue title, ID, status, and more. The add-on integrates seamlessly with both Jira Cloud and Server and is compatible with Chrome, Firefox, Edge and Opera browsers.",
-  "homepage_url": "https://github.com/daemonLibra/JiraIssueCopyData",
+  "homepage_url": "https://github.com/Malo196/JiraSnippet",
   "author": "https://github.com/daemonLibra",
   "icons": {
     "48": "icons/logo_48.png"
